# llvm-obfuscation-edu

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: macos-build.yml  ubuntu-build.yml
docs/CompareAssembly/aarch64/: obfuscatedbinaryITR1aarch64.asm  obfuscatedbinaryITR3aarch64.asm  originalbinaryAarch64.asm
docs/CompareAssembly/intelx86/: obfuscatedbinaryITR1x86.asm  obfuscatedbinaryITR3x86.asm  originalbinaryx86.asm  sourcecode.cpp
src/: CMakeLists.txt  LLVMObfuscation.cpp  LLVMObfuscation.h
src/CryptoUtils/: CMakeLists.txt  CryptoUtils.cpp  CryptoUtils.h  LICENSE.txt
src/OpSubstitutionPass/: CMakeLists.txt  OperatorSubstitution.cpp  OperatorSubstitution.h
src/StaticFunctionCallAnalysisPass/: CMakeLists.txt  StaticFunctionCallAnalysisPass.cpp  StaticFunctionCallAnalysisPass.h
tests/: .gitignore  Makefile  ObfuscationTest.cpp
